--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "5.2.2",
+    "@redwoodjs/auth-dbauth-api": "5.2.2",
     "@redwoodjs/graphql-server": "5.2.2"
   }
 }
