--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     ]
   },
   "devDependencies": {
+    "@redwoodjs/auth-dbauth-setup": "5.2.2",
     "@redwoodjs/core": "5.2.2",
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
