--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth-dbauth-web": "5.2.2",
     "@redwoodjs/forms": "5.2.2",
     "@redwoodjs/router": "5.2.2",
     "@redwoodjs/web": "5.2.2",
