feat/cloudinary upload widget frontend #35

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "latest",
+    "cloudinary": "^1.37.3",
     "react-icons": "^4.10.1"
   }
 }
