--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@redwoodjs/auth-dbauth-setup": "6.1.1",
+    "@redwoodjs/cli-storybook": "6.1.1",
     "@redwoodjs/core": "6.1.1",
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
