--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/auth-dbauth-setup": "6.1.1",
-    "@redwoodjs/cli-storybook": "6.1.1",
-    "@redwoodjs/core": "6.1.1",
+    "@redwoodjs/auth-dbauth-setup": "6.2.0",
+    "@redwoodjs/cli-storybook": "6.2.0",
+    "@redwoodjs/core": "6.2.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "eslintConfig": {
@@ -25,10 +25,12 @@
   },
   "packageManager": "yarn@3.5.1",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.15",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "latest",
+    "babel-plugin-graphql-tag": "^3.3.0",
     "cloudinary": "^1.37.3",
     "react-icons": "^4.10.1"
   }
