config: Update env example

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
 
-SEND_IN_BLUE_KEY=xxxxxxxxxxxxxxxxxxxxx
+SMTP_HOST=xxxxxxxxxxxx
+SMTP_USERNAME=xxxxxxxxxxxx
+SMTP_PASSWORD=xxxxxxxxxxxx
