--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # TEST_DATABASE_URL=file:./.redwood/test.db
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
+
+SMTP_HOST=xxxxxxxxxxxx
+SMTP_USERNAME=xxxxxxxxxxxx
+SMTP_PASSWORD=xxxxxxxxxxxx
