--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,16 @@
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
 
+# Database settings
+DATABASE_URL="postgresql://xxxxxxxxxx:xxxxxxxxxxxxxxxx@localhost:5432/postgres"
+TEST_DATABASE_URL="postgresql://xxxxxxxxxxx:xxxxxxxxxxxxxxxx@localhost:5432/postgres"
+
+# Cloudinary settings
+CLOUD_NAME=xxxxxxxxx
+UPLOAD_PRESET=xxxxxxxxxxxx
+API_KEY=xxxxxxxxxxxxxxx
+
+# Email settings
 SMTP_HOST=xxxxxxxxxxxx
 SMTP_USERNAME=xxxxxxxxxxxx
 SMTP_PASSWORD=xxxxxxxxxxxx
