revert: Revert to sending emails using Brevo / Sendinblue

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ CLOUD_NAME=xxxxxxxxx
 UPLOAD_PRESET=xxxxxxxxxxxx
 API_KEY=xxxxxxxxxxxxxxx
 
+# Sendinblue settings
+SEND_IN_BLUE_KEY=xxxxxxxxxxxxxxx
+
 # Email settings
 SMTP_HOST=xxxxxxxxxxxx
 SMTP_USERNAME=xxxxxxxxxxxx
