--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 
 # Database settings
 DATABASE_URL="postgresql://xxxxxxxxxx:xxxxxxxxxxxxxxxx@localhost:5432/postgres"
-TEST_DATABASE_URL="postgresql://xxxxxxxxxxx:xxxxxxxxxxxxxxxx@localhost:5432/postgres"
+TEST_DATABASE_URL="postgresql://xxxxxxxxxxx:xxxxxxxxxxxxxxxx@localhost:5433/postgres" # Note: The test db uses port 5433 instead of 5432
 
 # Cloudinary settings
 CLOUD_NAME=xxxxxxxxx
