feat: Use redwoodjs sentry plugin

--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@envelop/sentry": "5",
     "@redwoodjs/api": "6.2.2",
     "@redwoodjs/auth-dbauth-api": "6.2.2",
     "@redwoodjs/graphql-server": "6.2.2",
+    "@sentry/node": "7",
+    "@sentry/tracing": "7",
     "nodemailer": "^6.9.5"
   }
 }
