--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DATABASE_URL="postgresql://xxxxxxxxxx:xxxxxxxxxxxxxxxx@localhost:5432/postgres"
 TEST_DATABASE_URL="postgresql://xxxxxxxxxxx:xxxxxxxxxxxxxxxx@localhost:5433/postgres" # Note: The test db uses port 5433 instead of 5432
 
 # Cloudinary settings
+USERNAME=xxxxxxxxxxxxxxx
 CLOUD_NAME=xxxxxxxxx
 UPLOAD_PRESET=xxxxxxxxxxxx
 API_KEY=xxxxxxxxxxxxxxx
